# SafeMAP

./: .env.example  .gitignore  LICENSE  README.md  SAFEMAP_CODEX_SOURCE_OF_TRUTH.md  SAFEMAP_RESEARCH_TODO.md  pyproject.toml  requirements.txt  safemap.example.yaml
.github/workflows/: pages.yml  tests.yml
docs-site/: README.md  index.html  script.js  styles.css
examples/error_code/: expected.rs  main.c
examples/malloc_free/: expected.rs  main.c
examples/nullable_pointer/: expected.rs  main.c
examples/output_parameter/: expected.rs  main.c
examples/pointer_length_array/: expected.rs  main.c
examples/simple_pointer/: expected.rs  main.c
reports/: sample_report.md
safemap/: __init__.py  artifacts.py  cli.py  config.py  logging_utils.py  models.py  pipeline.py  process.py
safemap/analysis/: __init__.py  c_analyzer.py  call_graph.py  complexity_metrics.py  dependency_graph.py  eligibility.py  idiom_detector.py  pointer_classifier.py  rust_analyzer.py
safemap/benchmarks/: __init__.py  baseline_runner.py  benchmark_runner.py
safemap/ingestion/: __init__.py  compile_db.py  file_discovery.py  project_loader.py
tests/: test_c_analyzer.py  test_compile_db.py  test_config.py  test_dependency_graph.py  test_eligibility.py  test_error_parser.py  test_file_discovery.py  test_idiom_detector.py  test_ingestion.py  test_metrics.py  test_migration_planner.py  test_patch_applier.py  test_pipeline.py  test_pointer_classifier.py  test_report_generator.py  test_residual_unsafe.py  test_response_parser.py  test_safe_synthesizer.py  test_signature_generator.py
(+33 files in other folders)
