[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safemap"
version = "0.1.0"
description = "Safe-first analysis-guided C-to-Rust migration research prototype"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "clang>=17",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
rust-analysis = ["tree-sitter>=0.22", "tree-sitter-rust>=0.21"]

[project.scripts]
safemap = "safemap.cli:main"

[tool.setuptools.packages.find]
include = ["safemap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
